{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "79bba81c-c0fe-4c10-925e-dd4baef71c0f",
            "actions": [
                {
                    "name": "Player1Move",
                    "type": "Value",
                    "id": "8976a826-ece2-4286-b0aa-fa04170ac283",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player2Move",
                    "type": "Value",
                    "id": "46c9f7ad-de9f-46cf-a87f-2bb95e92fac1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "940329a9-c36b-4d30-9ada-18fd2ab0d0ec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f7ddb4cf-2f1c-4007-ab6a-b9d34be0dad6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "94ccaa69-7982-49d6-aa1c-d911a9cec08e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a3132ff9-0300-4774-8081-62cd1dba7a06",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "18605f5b-9992-4497-bf9e-fb73da6b2e64",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "59c924a1-1691-40f1-8300-e622680f8361",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow",
                    "id": "95b885ce-0584-49b8-85ca-a9040198422c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ac3fb50c-3eac-4c03-ad95-f3c0cb835744",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b138e5c4-40c0-423c-a04d-88f8feff598a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ab82d06d-1932-4a39-a45f-1eaed3e07c11",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d0508c92-c46e-49e8-a71d-921b92070ccd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea0d2956-33ac-4f7d-a63e-9f8a7c200caa",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "445b5e2c-2a2c-412f-aa29-4f6204021ce6",
            "actions": [
                {
                    "name": "OpenSettingsMenu",
                    "type": "Button",
                    "id": "13a4dc91-f94d-422d-897a-fbea4472f60c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f0726d0-02e3-418e-a061-f165742f8f40",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSettingsMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dffeb960-d440-4aca-a8df-e8ff4bb3f4d4",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSettingsMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}